# OptionsMaker

./: .gitignore  README.md
docker/: docker-compose.yml
options_maker_gui/: index.html  package-lock.json  package.json  vite.config.ts
options_maker_gui/src/: App.scss  App.tsx  Home.tsx  Nav.scss  Nav.tsx  State.tsx  common.tsx  compare.ts  icons.tsx  main.scss  main.tsx  notifications.ts  utils.ts  ws.ts
options_maker_gui/src/stocks/: GroupView.tsx  Stocks.scss  Stocks.tsx  StocksTable.tsx
options_maker_gui/src/ticker/: Chart.tsx  OptionsView.tsx  OrderForm.tsx  PriceLevelUpdate.tsx  PriceLineDragPlugin.ts  Replay.tsx  Ticker.scss  Ticker.tsx  chartComponents.ts  priceLineComponents.ts  stopLimits.ts
options_maker_rs/: Cargo.toml  crawler.toml  etfs.toml
options_maker_rs/.sqlx/: query-0eb98f438d3b2c43e81af645981c76884fa9d6b1f65f545dcd9852b88d0a32cf.json  query-1a632b372348c9015528e059ebe2d6e6d85eb6b3be6846d0ef3014d7c0aa7878.json  query-29daf3dbd8f41743650ee984e5610d0de2d69a7ff7f0aec38e06c37191bc2a40.json  query-3882a1669a5dcfd9746e138fded9d85f720fcb243821bf8048d3755975a652d2.json  query-55bc61c535c27dfb319ffad92a09d678b6a0651f5d8513c77f0e92feaa2a2904.json  query-9a33660075644aac142e0806773c6d9d4ade118cee3ca6db170b8a5f2d9d8617.json  query-ae3251c1f389603c02ddd9ff2c6eaa417323b4f27411952c42e7f24dab0533c3.json  query-cbcd24704a1e8057071786ed7a2a7ae39ce2c0b492c553312f03a60991a5d627.json  query-fca1e84adf4f89507623d61f49ca73a529e971ff06f27ccf55b0f743ec7d6feb.json
options_maker_rs/app_config/: Cargo.toml
options_maker_rs/app_config/src/: lib.rs
options_maker_rs/crawler/: Cargo.toml
options_maker_rs/crawler/src/: browser.rs  fundamentals.rs  lib.rs  main.rs  parser.rs  stock_scanner.rs
options_maker_rs/crawler/templates/: fundamental_query.md
options_maker_rs/data_provider/: Cargo.toml
options_maker_rs/data_provider/src/: lib.rs  replay.rs  schwab.rs  time_helper.rs
options_maker_rs/fundamentals/: Cargo.toml
options_maker_rs/fundamentals/src/: browser.rs  lib.rs  parser.rs
options_maker_rs/persist/: Cargo.toml
options_maker_rs/persist/migrations/: 01_init.sql  02_price_levels.sql  03_symbol_groups.sql  04_crawler.sql
options_maker_rs/persist/src/: crawler.rs  fundaments.rs  groups.rs  lib.rs  price_level.rs  prices.rs  ticker.rs
options_maker_rs/schwab_client/: Cargo.toml
options_maker_rs/schwab_client/src/: auth.rs  candle.rs  emulated_client.rs  lib.rs  schwab_client.rs
options_maker_rs/schwab_client/src/real_client/: auth.rs  mod.rs
options_maker_rs/schwab_client/src/streaming_client/: mod.rs  streamer.rs
options_maker_rs/server/: Cargo.toml
options_maker_rs/server/src/: app_error.rs  groups.rs  main.rs  stocks.rs  ticker.rs  trading_view.rs  websocket.rs
options_maker_rs/server/src/analyzer/: chart.rs  controller.rs  dataframe.rs  divergence.rs  gap_fill.rs  mod.rs  support_resistance.rs  utils.rs  volume.rs
options_maker_rs/server/src/analyzer/trend_filter/: bb.rs  mod.rs  plot.rs  volume.rs
options_maker_rs/server/src/analyzer/trend_processor/: mod.rs  volume.rs
options_maker_rs/server/src/analyzer/volume/: mod.rs  predictor.rs
options_maker_rs/server/templates/: example.html  tv_chart.html
options_maker_rs/ta_lib/: Cargo.toml  build.rs
options_maker_rs/ta_lib/src/: lib.rs  momentum.rs  momentum_indicators.rs  overlap.rs  overlap_studies.rs  ta_lib.rs  test.rs  volatility.rs  volume.rs  volume_indicators.rs
options_maker_rs/util/: Cargo.toml
options_maker_rs/util/src/: http.rs  init.rs  lib.rs  test.rs  time.rs
options_maker_server/: main.py  pyproject.toml  routes.py  websocket.py
options_maker_server/broker/: __init__.py  client.py  client_test.py  fake_client.py  models.py
options_maker_server/db/: __init__.py  db_helper.py  instruments.py
options_maker_server/trader/: __init__.py  chart.py  controller.py  controller_tester.py  trades_manager.py
options_maker_server/utils/: prices.py  times.py
