[workspace]
resolver = "3"
members = ["app_config", "schwab_client", "server", "ta_lib", "util"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = "0.4"
tracing = "0.1"

itertools = "0.14"

async-trait = "0.1"
tokio = "1.45"
futures = "0.3"

[profile.dev]
debug = false

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
