[workspace]
resolver = "3"
members = ["app_config", "data_provider", "crawler", "persist", "schwab_client", "server", "ta_lib", "util"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

chrono = "0.4"
tracing = "0.1"

itertools = "0.14"
rustc-hash = "2.1"
askama = "0.14"
rand = { version = "0.9", default-features = false }

async-trait = "0.1"
tokio = "1.45"
futures = "0.3"
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum = { version = "0.8" }

[profile.dev]
debug = true

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1
