[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crawler"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
headless_chrome = "1.0"
scraper = "0.24"
sysinfo = "0.37"
rand = { workspace = true }


chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

app_config = { path = "../app_config" }
persist = { path = "../persist" }
util = { path = "../util" }