[package]
name = "data_provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }

tracing = { workspace = true }
chrono = { workspace = true }
rustc-hash = { workspace = true }

app_config = { path = "../app_config" }
schwab_client = { path = "../schwab_client" }
persist = { path = "../persist" }
util = { path = "../util" }

async-trait = { workspace = true }
tokio = { workspace = true }

serde = { workspace = true }
