[package]
name = "fundamentals"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
headless_chrome = "1.0"
scraper = "0.24"

chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

app_config = { path = "../app_config" }
persist = { path = "../persist" }
util = { path = "../util" }