[package]
name = "schwab_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

app_config = { path = "../app_config" }
util = { path = "../util" }

url = "2.5"

axum-server = { version = "0.7", features = ["tls-rustls"] }
axum = { version = "0.8" }
tokio = { workspace = true }
base64 = "0.22.1"
