[package]
name = "schwab_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rustc-hash = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

app_config = { path = "../app_config" }
util = { path = "../util" }

url = "2.5"
itertools = { workspace = true }
urlencoding = "2.1.3"

axum-server = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.28", features = ["rustls", "rustls-tls-webpki-roots"] }
