[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

rustls = "0.23"
time = { version = "0.3", features = ["macros"] }
chrono = { version = "0.4" }
util = { path = "../util" }
tracing-subscriber = { version = "0", features = ["env-filter", "local-time"] }
tracing = { workspace = true }
mimalloc = "0.1"
flate2 = "1.0"
itertools = { workspace = true }

app_config = { path = "../app_config" }
schwab_client = { path = "../schwab_client" }
data_provider = { path = "../data_provider" }

tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }

persist = { path = "../persist" }
serde = { workspace = true }
serde_json = { workspace = true }

ta_lib = { path = "../ta_lib" }