[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "options_maker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

rustls = "0.23"
chrono = { version = "0.4" }
util = { path = "../util" }
tracing = { workspace = true }
mimalloc = "0.1"
flate2 = { version = "1.0", default-features = false }
itertools = { workspace = true }
rand = { workspace = true, default-features = false }
rustc-hash = { workspace = true }

app_config = { path = "../app_config" }
schwab_client = { path = "../schwab_client" }
data_provider = { path = "../data_provider" }

tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
axum = { workspace = true, features = ["ws", "query"] }
axum-extra = { version = "0.10", features = ["query"] }
axum-server = { workspace = true }
tower-http = { version = "0.6", features = ["fs", "compression-full"] }
askama = "0.14"

persist = { path = "../persist" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

ta_lib = { path = "../ta_lib" }
candle-core = "0.9"
candle-nn = "0.9"